08-aks-azfw-byocni/src/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: podinfo
  name: podinfo-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9898
  selector:
    app: podinfo
  type: ClusterIP
